# astrobur

./: .envrc  .gitignore  Cargo.toml  api.sh  docker-compose.yaml  flake.nix  output
migrations/: 20250120151054_create_url_trackings_table.sql
server/: Cargo.toml  create_url.sh  validate_token.sh
server/migrations/: 20250118052242_create_users_table.sql  20250118052433_create_organizations_table.sql  20250118053540_create_campaigns_table.sql  20250118094129_create_urls_table.sql  20250120151054_create_url_trackings_table.sql
server/src/: app.rs  app_state.rs  error.rs  lib.rs  main.rs  queue.rs
server/src/database/models/: mod.rs  url.rs  user.rs
server/src/http/: analytics.rs  authenticator.rs  error.rs  generator.rs  http_server.rs  mod.rs
server/src/http/api/: auth.rs  mod.rs  url.rs  user.rs
server/src/http/api/request/: auth.rs  mod.rs  url.rs  user.rs
server/src/http/api/response/: auth.rs  url.rs
server/src/http/request_payload/: mod.rs
server/src/http/response/: mod.rs
server/src/job/: mod.rs  url.rs
server/src/service/: app_service.rs  auth.rs  jwt.rs  jwt_service.rs  mod.rs  url.rs  user.rs
