[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
apalis = { version = "0.6.4", features = ["limit", "timeout"] }
apalis-redis = { version = "0.6.4", features = []}
axum = "0.8.1"
bcrypt = "0.16.0"
chrono = "0.4.39"
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = ["postgres","json","chrono","runtime-tokio"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "bur-server"
path = "src/main.rs"
